--- a/templates/paste.html
+++ b/templates/paste.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans:400,700">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.css">
     <script src="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.js"></script>
-    <script src="http://bitwiseshiftleft.github.io/sjcl/sjcl.js"></script>
+    <script src="https://cdn.rawgit.com/bitwiseshiftleft/sjcl/master/sjcl.js"></script>
     <style type="text/css">
         .content-area {
             font-family: 'Open Sans', sans-serif;
