--- a/templates/index.html
+++ b/templates/index.html
@@ -91,7 +91,7 @@
             var password = generatePassword(16, false);
             var ciphertext = sjcl.encrypt(password, mde.value(), { ks:256 });
 
-            $.post("/api/v1/create", { "ciphertext": ciphertext }, function(data) {
+            $.post("/api/v1/create", { "ciphertext": String(ciphertext) }, function(data) {
                 if (!data.error) {
                     $("#instruction").text("https://ctrlv.space/" + data.key + "#" + password);
                     selectText('instruction');
