Added github icon

--- a/templates/index.html
+++ b/templates/index.html
@@ -53,7 +53,14 @@
         .content-area {
             margin-left: 16px;
             margin-right: 16px;
+	     margin-bottom: 48px;
         }
+	 #githubIcon {
+	     font-size: 44px;
+	 }
+	 .github {
+	     text-align: center;
+	 }
     </style>
 </head>
 <body>
@@ -63,6 +70,10 @@
 
     <div class="content-area">
         <textarea id="textbox"></textarea>
+    </div>
+
+    <div class="github">
+        <a href="https://github.com/adrianchifor/ctrlv.space" target="_blank"><i class="fa fa-github" id="githubIcon"></i></a>
     </div>
 
     <script>
