--- a/templates/index.html
+++ b/templates/index.html
@@ -10,25 +10,25 @@
     <script src="https://cdn.rawgit.com/bitwiseshiftleft/sjcl/master/sjcl.js"></script>
     <script src="https://cdn.rawgit.com/bermi/password-generator/master/dist/password-generator.min.js"></script>
     <style type="text/css">
-        h1, h2, .btn, .content-area {
+        h1, h2, label, .btn, .content-area {
             font-family: 'Open Sans', sans-serif;
             -webkit-transition: all 0.3s ease-in-out;
             transition: all 0.3s ease-in-out;
         }
         h1 {
-            padding: 16px 32px 0px 32px;
+            padding: 8px 32px 0px 32px;
             text-align: center;
             font-size: 24px;
             color: rgba(0,0,0,0.6);
         }
         h2 {
-            padding: 0px 32px 12px 32px;
+            padding: 0px 32px 8px 32px;
             text-align: center;
             font-size: 20px;
             color: rgba(0,0,0,0.4);
         }
         .btn {
-            margin-bottom: 32px;
+            margin-bottom: 18px;
             cursor: pointer;
             text-align: center;
             margin-left: auto;
@@ -50,23 +50,73 @@
             background-color:rgba(0,0,0,0.01);
             border-color:rgba(0,0,0,0.3);
         }
-        .content-area {
-            margin-left: 16px;
-            margin-right: 16px;
-	     margin-bottom: 48px;
+        .checkbox-area {
+            margin-bottom: 18px;
+            text-align: center;
         }
-	 #githubIcon {
-	     font-size: 44px;
-	 }
-	 .github {
-	     text-align: center;
-	 }
+        .checkbox {
+            position: relative;
+            top: -0.375rem;
+            margin: 0 1rem 0 0;
+            cursor: pointer;
+        }
+        .checkbox:before {
+            -webkit-transition: all 0.2s ease-in-out;
+            -moz-transition: all 0.2s ease-in-out;
+            transition: all 0.2s ease-in-out;
+            content: "";
+            position: absolute;
+            left: 0;
+            z-index: 1;
+            width: 1rem;
+            height: 1rem;
+            border: 2px solid #f2f2f2;
+        }
+        .checkbox:checked:before {
+            -webkit-transform: rotate(-45deg);
+            -moz-transform: rotate(-45deg);
+            -ms-transform: rotate(-45deg);
+            -o-transform: rotate(-45deg);
+            transform: rotate(-45deg);
+            height: .5rem;
+            border-color: rgba(0, 0, 0, 0.8);
+            border-top-style: none;
+            border-right-style: none;
+        }
+        .checkbox:after {
+            content: "";
+            position: absolute;
+            top: -0.125rem;
+            left: 0;
+            width: 1.1rem;
+            height: 1.1rem;
+            background: #fff;
+            cursor: pointer;
+        }
+        #selfDestructText {
+            font-size: 18px;
+            color: rgba(0,0,0,0.6);
+        }
+        .content-area {
+            margin: 0px 16px 16px 16px;
+        }
+        .github {
+            text-align: center;
+        }
+        #githubIcon {
+            font-size: 44px;
+        }
     </style>
 </head>
 <body>
     <h1>Encrypted paste service.</h1>
     <h2 id="instruction" onclick="selectText('instruction')">Just write, save and share the link.</h2>
     <div id="save" class="btn" onclick="return save();">Save</div>
+
+    <div class="checkbox-area">
+        <input type="checkbox" class="checkbox" id="selfDestruct" checked>
+        <label id="selfDestructText" for="selfDestruct">Self-destruct once read</label>
+    </div>
 
     <div class="content-area">
         <textarea id="textbox"></textarea>
@@ -99,10 +149,23 @@
                 return false;
             }
 
+            if (mde.value().length > 5000) {
+                $("#instruction").text("Maximum length is 5000.");
+
+                setTimeout(function() {
+                    $("#instruction").text("Just write, save and share the link.");
+                }, 2500);
+
+                return false;
+            }
+
             var password = generatePassword(16, false);
             var ciphertext = sjcl.encrypt(password, mde.value(), { ks:256 });
 
-            $.post("/api/v1/create", { "ciphertext": String(ciphertext) }, function(data) {
+            $.post("/api/v1/create", {
+                "ciphertext": String(ciphertext),
+                "destroy": $('#selfDestruct').is(':checked')
+            }, function(data) {
                 if (!data.error) {
                     $("#instruction").text("https://ctrlv.space/" + data.key + "#" + password);
                     selectText('instruction');
