Updated Dockerfile. Refactoring and improvements.

--- a/templates/404.html
+++ b/templates/404.html
@@ -11,11 +11,11 @@
             transition: all 0.3s ease-in-out;
             padding: 50px 32px 50px 32px;
             text-align: center;
-            font-size: 48px;
+            font-size: 36px;
             color: rgba(0,0,0,0.7);
         }
     </style>
 </head>
 <body>
-    <h1>Oups! 404 Not Found</h1>
+    <h1>Paste not found.<br>It either self-destructed or the key in URL is wrong ({{ key }}).</h1>
 </body>
