--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <head>
     <meta name="referrer" content="no-referrer" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ctrl+V</title>
     <link rel="icon" href="/static/icon.png">
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans:400,700">
@@ -104,7 +105,9 @@
             text-align: center;
         }
         #githubIcon {
+            margin-bottom: 16px;
             font-size: 44px;
+	     color: black;
         }
     </style>
 </head>
@@ -181,7 +184,11 @@
 
             $.post("/api/v1/create", formData, function(data) {
                 if (!data.error) {
-                    $("#instruction").text("https://ctrlv.space/" + data.key + "#" + password);
+                    $("#instruction").text(
+                        window.location.protocol + "//" + window.location.hostname +
+                        "/" + data.key + "#" + password
+                    );
+
                     saved = true;
                 }
             });
