--- a/templates/paste.html
+++ b/templates/paste.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <head>
     <meta name="referrer" content="no-referrer" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ctrl+V</title>
     <link rel="icon" href="/static/icon.png">
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans:400,700">
@@ -55,7 +56,6 @@
             mde.value("Append **#password** to URL to decrypt content.")
         }
 
-        mde.toggleSideBySide();
         mde.toggleFullScreen();
 
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
