Downloaded css and js requirements to local

--- a/templates/paste.html
+++ b/templates/paste.html
@@ -5,10 +5,10 @@
     <title>Ctrl+V</title>
     <link rel="icon" href="/static/icon.png">
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans:400,700">
-    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.css">
-    <script src="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <script src="https://cdn.rawgit.com/bitwiseshiftleft/sjcl/master/sjcl.js"></script>
+    <link rel="stylesheet" type="text/css" href="/static/css/simplemde.min.css">
+    <script src="/static/js/simplemde.min.js"></script>
+    <script src="/static/js/jquery.min.js"></script>
+    <script src="/static/js/sjcl.js"></script>
     <style type="text/css">
         .content-area {
             font-family: 'Open Sans', sans-serif;
