--- a/templates/404.html
+++ b/templates/404.html
@@ -3,7 +3,7 @@
     <meta name="referrer" content="no-referrer" />
     <title>Ctrl+V</title>
     <link rel="icon" href="/static/icon.png">
-    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans:400,700">
+    <link rel="stylesheet" type="text/css" href="/static/css/font.css">
     <style type="text/css">
         h1 {
             font-family: 'Open Sans', sans-serif;
