--- a/templates/index.html
+++ b/templates/index.html
@@ -215,6 +215,12 @@
                     saved = true;
                     $('#save').fadeTo("fast", 0.5);
                     $('#save').css('cursor', 'default');
+                } else {
+                    $("#instruction").text("Oups! Something has gone terribly wrong.");
+
+                    setTimeout(function() {
+                        $("#instruction").text("Just write, save and share the link.");
+                    }, 2500);
                 }
             });
 
