--- a/templates/index.html
+++ b/templates/index.html
@@ -215,6 +215,13 @@
                     saved = true;
                     $('#save').fadeTo("fast", 0.5);
                     $('#save').css('cursor', 'default');
+
+                    try {
+                        selectText('instruction');
+                        var copied = document.execCommand('copy');
+
+                        if (copied) $("#save").text('Copied!');
+                    } catch (err) {}
                 } else {
                     $("#instruction").text("Oups! Something has gone terribly wrong.");
 
